Wait, send and clean classes updated

--- a/site/index.html
+++ b/site/index.html
@@ -746,17 +746,17 @@
 <tr>
 <td style="text-align: left;">DADAGEMO_0000006</td>
 <td style="text-align: left;">clean signal</td>
-<td style="text-align: left;">An unit of work process by which a plan entity cleans (erases) the specified signal.</td>
+<td style="text-align: left;">An unit of work process by which a plan entity cleans (erases) all signal associated to the specified condition.</td>
 </tr>
 <tr>
 <td style="text-align: left;">DADAGEMO_0000007</td>
 <td style="text-align: left;">send signal</td>
-<td style="text-align: left;">An unit of work process by which a plan entity sends a specific signal to a specified channel.</td>
+<td style="text-align: left;">An unit of work process by which a plan entity sends a signal associated to the specified condition.</td>
 </tr>
 <tr>
 <td style="text-align: left;">DADAGEMO_0000008</td>
 <td style="text-align: left;">wait for signal</td>
-<td style="text-align: left;">An unit of work process by which a plan entity waits until a specific signal is available through a specified channel; then ends.</td>
+<td style="text-align: left;">An unit of work process by which a plan entity waits until a signal associated to the specified condition is sent; then ends.</td>
 </tr>
 <tr>
 <td style="text-align: left;">DADAGEMO_0000009</td>
